UI Fix - New Series ACLs show up properly, fixed alignment issues on role tabs, make External Roles tab optional (organisation config).

--- a/modules/matterhorn-admin-ui-ng/src/main/webapp/styles/components/modals/_modal-base.scss
+++ b/modules/matterhorn-admin-ui-ng/src/main/webapp/styles/components/modals/_modal-base.scss
@@ -133,16 +133,21 @@
         border-radius: $main-border-radius 0 0 $main-border-radius;
         border-right-width: 0;
         float: left;
-        width: 90% !important;
+        width: 100% !important;
     }
 
     a.clear {
+        width: 46px;
         margin-top: 5px;
-        float: left;
+        float: right;
         @include btn(white);
         @include fa-icon($fa-var-times, before, block, 0, 0.45em 0.45em 0.55em 0.45em, inherit, 14px);
 
         border-radius: 0 $main-border-radius $main-border-radius 0;
+
+        &+input.search {
+            width: calc(100% - 46px) !important;
+        }
     }
 }
 
